# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  chat.py  config.py  db.py  documents.py  main.py  store.py
backend/tests/: test_auth.py  test_chat.py  test_db.py  test_documents.py  test_documents_api.py  test_health.py  test_static.py
frontend/: MANUAL_TESTING.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.mts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: AppShell.tsx  AuthForm.test.tsx  AuthForm.tsx  AuthScreen.tsx  ChatPanel.test.tsx  ChatPanel.tsx  Disclaimer.test.tsx  Disclaimer.tsx  DocumentsList.test.tsx  DocumentsList.tsx  DownloadPdfButton.test.tsx  DownloadPdfButton.tsx  GenericPdfDocument.tsx  GenericPreview.tsx  LoginForm.test.tsx  LoginForm.tsx  NdaForm.test.tsx  NdaForm.tsx  NdaPdfDocument.test.tsx  NdaPdfDocument.tsx  NdaPreview.test.tsx  NdaPreview.tsx  fields.tsx
frontend/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  chat.test.ts  chat.ts  documents.json  documents.test.ts  documents.ts  nda-types.test.ts  nda-types.ts  standard-terms.test.ts  standard-terms.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
